--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,9 @@
 streamlit==1.45.0
-tensorflow==2.13.0
-pandas==2.2.2
-numpy==1.26.4
-scikit-learn==1.4.2
-matplotlib==3.8.4
-plotly==5.21.0
-openpyxl==3.1.2
-xlsxwriter==3.2.0
-kaleido==0.2.1
-joblib==1.4.2
-requests==2.31.0
-altair==5.3.0
-jinja2==3.1.4
-watchdog==4.0.0
-protobuf==4.25.3
-python-dateutil==2.9.0.post0
-pillow==10.3.0
-typing-extensions==4.11.0
-tenacity==8.2.3
+tensorflow==2.12.0
+pandas==2.2.3
+numpy==2.1.3
+scikit-learn==1.6.1
+xgboost==2.0.3
+plotly==6.0.1
+openpyxl==3.1.5
+xlsxwriter==3.2.3
