--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 streamlit==1.45.0
-tensorflow==2.12.0
-pandas==2.2.3
-numpy==2.1.3
-scikit-learn==1.6.1
-xgboost==2.0.3
-plotly==6.0.1
-openpyxl==3.1.5
-xlsxwriter==3.2.3
+tensorflow  # no version pinned to allow latest compatible
+xgboost
+scikit-learn
+pandas
+numpy
+plotly
+openpyxl
+xlsxwriter
